# linuxcord

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/linuxcord/: __init__.py  __main__.py  api.py  cli.py  config.py  desktop.py  freedesktop.py  installer.py  launcher.py  linuxcord.py  lock.py  logging_config.py  paths.py  types.py  updater.py  versions.py
tests/: conftest.py  helpers.py  test_cli.py  test_config.py  test_freedesktop.py  test_installer.py  test_launcher.py  test_linuxcord.py  test_module_main.py  test_paths.py  test_types.py  test_updater.py  test_versions_local.py  test_versions_online.py
tests/e2e/: server.py  tarball.py  test_e2e.py
