[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "linuxcord"
version = "1.2.0"
description = "User-space Discord launcher/updater for Linux"
readme = "README.md"
authors = [{ name = "linuxcord", email = "noreply@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "filelock>=3.15",
    "packaging>=23.2",
    "pyxdg>=0.28",
    "requests>=2.31",
    "typing_extensions>=4.10",
]
license = { file = "LICENSE" }

[project.scripts]
linuxcord = "linuxcord.cli:main"

[tool.uv]
dev-dependencies = [
    "black>=24.0",
    "flake8>=6.1",
    "flake8-pyproject>=1.2",
    "basedpyright>=1.14",
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
]

[tool.flake8]
ignore = ["E501"]
extend-exclude = [".venv"]

[tool.basedpyright]
pythonVersion = "3.11"

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.coverage.run]
source = ["linuxcord"]
omit = ["tests/*"]

[tool.coverage.report]
omit = ["tests/*"]
